# meson-bug-cmake-gcc-framework

./: CMakeLists.txt  meson.build
